# kube-mock-rs

./: Cargo.toml
examples/: simple.rs
src/: builder.rs  ext.rs  kubeapi.rs  lib.rs
src/ext/: status.rs
src/kubeapi/: controller.rs  error.rs  operations.rs  parser.rs  resources.rs  verbs.rs
src/kubeapi/controller/: inventory.rs  namespace.rs  node.rs  pod.rs
