[package]
name = "kube-mock"
version = "0.1.0"
edition = "2021"
description = "Mock Kubernetes server for testing"


[dependencies]
http = "1.1"
http-serde = "2.1"
# itertools = "0.13"
k8s-openapi = { version = "0.23", features = ["latest"] }
k8s-openapi-ext = "0.0.38"
kube = { version = "0.96", features = [] }
matchit = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-test = "0.4"
tracing = "0.1"
tower-test = "0.4"
uuid = { version = "1.11", features = ["v4"] }


[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[features]
pedantic = []
